style: overflow table and fix headers

--- a/src/app/professionals/components/professional-list/professional-list.component.sass
+++ b/src/app/professionals/components/professional-list/professional-list.component.sass
@@ -18,6 +18,7 @@
   visibility: hidden
 
 .prescriptions-container
+  overflow: auto
   display: flex
   flex-direction: column
   max-height: 50em
